--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Expense Tracker</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- header -->
-  <div class="header">
-    <h1>Good Morning, Pratham!</h1>
-    <div class="header-controls">
-      <div class="dropdown">
-        Daily <i class="fas fa-chevron-down"></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Expense Tracker</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- header -->
+    <div class="header">
+			<h1>Good Morning, Pratham!</h1>
+      <div class="header-controls">
+        <div class="dropdown">Daily <i class="fas fa-chevron-down"></i></div>
+        <div class="date-picker">
+          <i class="fas fa-calendar"></i>
+          16 January 2025
+        </div>
+        <div class="export-btn">
+          <i class="fas fa-download"></i>
+          Export
+        </div>
       </div>
-      <div class="date-picker">
-        <i class="fas fa-calendar"></i>
-        16 January 2025
-      </div>
-      <div class="export-btn"></div>
     </div>
-  </div>
 
-
-
-
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
