--- a/index.html
+++ b/index.html
@@ -27,6 +27,82 @@
       </div>
     </div>
 
+		<!-- main content -->
+		<div class="main-content">
+			<div class="dashboard-grid">
+				<div class="card">
+					<div class="card-header">
+						<h3 class="cart-title">Monthly Income</h3>
+						<button class="card-menu">
+							<i class="fas fa-ellipsis"></i>
+						</button>
+						<div class="amount income-amount">$2,645.00</div>
+						<div class="change">
+							<i class="fas fa-arrow-up"></i>
+							12% vs Last month
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="card-header">
+						<h3 class="card-title">Monthly Expenses</h3>
+						<button class="card-menu">
+							<i class="fas fa-ellipsis-h"></i>
+						</button>
+					</div>
+					<div class="amount expense-amount">$1,895.00</div>
+					<div class="change">
+						<i class="fas fa-arrow-up"></i>
+						12% vs Last month
+					</div>
+				</div>
+
+				<div class="card my-card">
+					<div class="card-header">
+						<h3 class="card-title">My Card</h3>
+						<button class="card-menu"
+						style="color: rgba(255,255,255,0.8)">
+							<i class="fas fa-ellipsis-h"></i>
+						</button>
+					</div>
+					<div style="font-size: 0.75rem; opacity: 0.8; margin-bottom: 1rem;">
+						Linked to your primary wallet
+					</div>
+
+					<div class="card-chip"></div>
+					<div class="card-number">5435 2735 0037 0015</div>
+					<div class="card-holder">Pratham Gupta</div>
+
+					<div class="card-logo">
+						<div class="card-logo-circle logo-red"></div>
+						<div class="card-logo-circle logo-orange"></div>
+					</div>
+
+					<div class="spending-section">
+						<div style="margin-bottom: 0.5rem; font-size: 0.875rem; opacity: 0.9;">
+							Spending Limit
+						</div>
+						<div class="spending-limit">$4,645.00</div>
+						<div class="spending-used">used from $12,645.00</div>
+						<div class="progress-bar">
+							<div class="progress-fill"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="chart-section"></div>
+			
+			<div class="card transactions -section"></div>
+		</div>
+
+
+
+
+
+
+
     <script src="script.js"></script>
   </body>
 </html>
