add recent transactions section with filtering options and styling

--- a/index.html
+++ b/index.html
@@ -219,8 +219,71 @@
         </div>
       </div>
 
-      <div class="card transactions-section"></div>
+      <div class="card transactions-section">
+        <div class="card-header">
+          <h3 class="card-title">Recent Transactions</h3>
+          <div class="filters">
+            <button class="filter-btn">
+              <i class="fas fa-sort"></i>
+              Short
+            </button>
+            <button class="filter-btn">
+              <i class="fas fa-filter"></i>
+              Filter
+            </button>
+          </div>
+        </div>
+
+        <table class="transactions-table">
+          <thead>
+            <tr>
+              <th>Date<i class="fas fa-sort"></i></th>
+              <th>Category<i class="fas fa-sort"></i></th>
+              <th>Amount<i class="fas fa-sort"></i></th>
+              <th>Status</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Jan 14, 2025</td>
+              <td>Subscription</td>
+              <td>$440.00</td>
+              <td><span class="status-success">Success</span></td>
+              <td>
+                <button class="action-btn">
+                  <i class="fas fa-ellipsis-h"></i>
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td>Jan 10, 2025</td>
+              <td>Transfer</td>
+              <td>$440.00</td>
+              <td><span class="status-success">Success</span></td>
+              <td>
+                <button class="action-btn">
+                  <i class="fas fa-ellipsis-h"></i>
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td>Jan 8, 2025</td>
+              <td>Transfer</td>
+              <td>$440.00</td>
+              <td><span class="status-success">Success</span></td>
+              <td>
+                <button class="action-btn">
+                  <i class="fas fa-ellipsis-h"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+
+    <!-- add income/expense buttons -->
 
     <script src="script.js"></script>
   </body>
