add income and expense summary to chart section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
                   font-size: 0.75rem;
                 "
-              ></div>
+              >
+                <div style="font-weight: 600">April 2025</div>
+                <div style="color: #10b891">Income: $894</div>
+                <div style="color: #ea580c">Expenses: $768</div>
+              </div>
               <div class="chart-bar-income" style="height: 120px"></div>
               <div class="chart-bar-expense" style="height: 80px"></div>
             </div>
